--- a/Odev/about-us.html
+++ b/Odev/about-us.html
@@ -40,12 +40,10 @@
            sed earum vitae atque perferendis voluptates et iure, hic harum omnis.
         </p>
         <h2 class="text-start mx-5 color-orng fs-4">Misyonumuz</h2>
-        <p class="mx-5 fw-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-           Consectetur rerum quidem magni. Dolor, praesentium, 
-           sed earum vitae atque perferendis voluptates et iure, hic harum omnis.
-           Lorem ipsum dolor sit amet consectetur adipisicing elit.
-           Consectetur rerum quidem magni. Dolor, praesentium, 
-           sed earum vitae atque perferendis voluptates et iure, hic harum omnis.
+        <p class="mx-5 fw-lighter">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Aperiam soluta, earum dolorum similique impedit possimus rerum temporibus minima dolores modi aliquid error voluptas. 
+        Debitis alias impedit sunt deleniti vero dolor ratione. Eveniet accusantium optio itaque aliquid sint iste amet soluta quibusdam, 
+        velit unde doloremque fugiat quam nemo ipsa quae voluptatibus?
         </p>
       </div>
 
