--- a/Odev/Odev1/index.html
+++ b/Odev/Odev1/index.html
@@ -19,7 +19,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>S
               <a class="nav-link" href="products.html">Ürünlerimiz</a>
               <a class="nav-link" href="about-us.html">Hakkımızda</a>
             </div>
@@ -47,7 +47,7 @@
          </article>
   
           <p class="lead text-center">
-          <a class="btn btn-primary btn-lg" href="info.html" role="button">Hakkımızda</a>
+          <a class="btn btn-primary btn-lg" href="about-us.html" role="button">Hakkımızda</a>
           </p>
         </div>
 
